# spotify-api

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  Pipfile  README.md  README_monitoring.md  claude.md  docker-compose.yaml  pyproject.toml  release-please-config.json  setup_ec2.md  spotify_monitor.py  sync_from_s3.py  test_spotify_monitor.py  test_sync_from_s3.py
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml  release-please.yml
cdk/: package-lock.json
cdk/lib/: spotify-api.ts
docker/api/: Dockerfile
spotify_api/: cache.py  custom_logger.py  main.py  notificate_current_playing.py
spotify_api/domain/: track_translator.py
spotify_api/domain/infrastructure/: token_info_repository.py
spotify_api/domain/model/: track.py
spotify_api/domain/slack/: block_builder.py
spotify_api/infrastructure/: spotify_oauth.py  spotipy.py  token_info_local_repository.py  token_info_s3_repository.py
spotify_api/interface/: authorize.py  track.py  track_response.py  track_response_translator.py
spotify_api/router/: authorize.py  current.py  track.py
spotify_api/router/response/: __init__.py  authorize_response.py  base_response.py  track_response.py  track_response_translator.py
spotify_api/service/: authorization_service.py
spotify_api/usecase/: authorize_usecase.py  current_playing_usecase.py  get_track_usecase.py  love_track_usecase.py
spotify_api/util/: datetime.py  environment.py
tests/: conftest.py  test_block_builder.py  test_infrastructure.py  test_placeholder.py  test_router.py  test_service.py  test_track.py  test_usecase.py  test_utils.py
