[project]
name = "spotify-api"
version = "0.1.0"
description = "Spotify API wrapper with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.99.0",
    "pydantic>=1.10.9",
    "mangum>=0.17.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "spotipy>=2.23.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "uvicorn>=0.30.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
    "types-requests>=2.31.0",
    "boto3-stubs>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spotify_api"]

# Ruff settings
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["spotify_api"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults (for FastAPI Depends)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["spotify_api"]

# Pytest settings
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

# Coverage settings
[tool.coverage.run]
source = ["spotify_api"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# MyPy settings
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "cdk/"]
